--- a/env.source.sample
+++ b/env.source.sample
@@ -22,6 +22,9 @@ export OCM_URL=${OCM_URL:-}
 ### Your user for ocm, passed to ocm
 export OCM_USER=${OCM_USER:-your_user}
 
+### Your kerberos username (without domain) if different than your OCM_USER
+export OCM_CONTAINER_KERBEROS_USER=${OCM_USER:-$(whoami)}
+
 ### Your ocm Offline Access Token from
 ###     https://cloud.redhat.com/openshift/token
 export OFFLINE_ACCESS_TOKEN="\
